openshift-ressources/customer-self-service-frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: customer-self-service-frontend
  name: customer-self-service-frontend
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: customer-self-service-frontend
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      creationTimestamp: null
      labels:
        app: customer-self-service-frontend
        deploymentconfig: customer-self-service-frontend
    spec:
      containers:
      - env:
        - name: REACT_APP_CUSTOMER_MANAGEMENT_BACKEND
          value: http://customer-management-backend-lakeside-mutual.apps.cluster-paris-3e9b.paris-3e9b.example.opentlc.com
        - name: REACT_APP_CUSTOMER_SELF_SERVICE_BACKEND
          value: http://customer-self-service-backend-lakeside-mutual.apps.cluster-paris-3e9b.paris-3e9b.example.opentlc.com
        - name: REACT_APP_POLICY_MANAGEMENT_BACKEND
          value: http://policy-management-backend-8090-lakeside-mutual.apps.cluster-paris-3e9b.paris-3e9b.example.opentlc.com
        image: image-registry.openshift-image-registry.svc:5000/lakeside-mutual/customer-self-service-frontend
        imagePullPolicy: Always
        name: customer-self-service-frontend
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
