openshift-ressources/customer-self-service-frontend/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: customer-self-service-frontend
  name: customer-self-service-frontend
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 3000
  selector:
    app: customer-self-service-frontend
    deploymentconfig: customer-self-service-frontend
  sessionAffinity: None
  type: ClusterIP
